# utahwaterpoloassociation

./: .env  .gitignore  CLAUDE.md  Makefile  Procfile  build.sh  copy.sh  deploy.sh  global.json  global.yaml  pyproject.toml  tailwind.config.js
.github/workflows/: deploy.yaml  preview.yaml
content/: index.md
content/about/: index.md
content/coaches/: index.md
content/coaches/directory/: index.md
content/directory/: index.md
content/home/: index.md
content/parents/: index.md
content/referees/: index.md
content/schedule/: index.md
content/schedules/: index.md
content/schedules/fall-high-school/: index.md
content/schedules/fall-youth/: index.md
content/schedules/spring-all-ages/: index.md
content/sponsors/: index.md
css/: input.css
data/: 2023_uwpa_hs_schedule.csv  2024_spring.csv  league_UTAH_FALL_HS_2023.json  league_UTAH_FALL_HS_2024.json  league_UTAH_SPRING_2024.json  league_UTAH_SPRING_2025.json
markdown/: post.md
pages/: index.html
pr-preview/pr-1/: index.html  style.css
pr-preview/pr-1/about/: index.html
pr-preview/pr-1/coaches/: index.html
pr-preview/pr-1/parents/: index.html
pr-preview/pr-1/referees/: index.html
pr-preview/pr-1/schedules/: index.html
public/: php_info.php  upload_xyz.php
src/notion2md/: config.py
src/notion2md/convertor/: block.py
src/notion2md/exporter/: block.py
src/ratingslib/ratings/: massey.py
src/utahwaterpoloassociation/: __init__.py  file_data.py  generator.py  global_data.py  jinja_env.py  models.py  page.py
tests/: test_serialization.py
(+49 files in other folders)
